# Student_Management_System

./: CMakeLists.txt  README.md  students.json
include/: Student.h  utils.h
src/: Student.cpp  main.cpp  utils.cpp
